--- a/iOSLocalization.xcodeproj/xcshareddata/xcschemes/iOSLocalization.xcscheme
+++ b/iOSLocalization.xcodeproj/xcshareddata/xcschemes/iOSLocalization.xcscheme
@@ -65,6 +65,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = "es"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
